Remove "output" dir
treat as script not shell

renaming of config files.

--- a/pipelines/phasing-evaluation/Snakefile
+++ b/pipelines/phasing-evaluation/Snakefile
@@ -1,8 +1,8 @@
-configfile: "config.yaml"
+# Snakemake pipeline to create a 
     
 rule all:
     input:
-        txt=expand("output/{chrom}_table_switch_errors.txt", chrom=config["chromosomes"])
+        txt=expand("evaluation/{chrom}/table_switch_errors.txt", chrom=config["chromosomes"])
 
 rule evaluate:
     input:
@@ -12,19 +12,20 @@ rule evaluate:
         access=config["accessibility"],
         roh=config["roh"]
     output:
-        txt="output/{chrom}_table_switch_errors.txt"
+        txt="evaluation/{chrom}/table_switch_errors.txt"
     params:
-        req="4G",
+        req="h_vmem=4G",
         overlap=250000,
         windowsize=500000
-    shell:
-        "python evaluate_phasing_performance.py "
-        "--eval {input.eval} "
-        "--test {input.test} "
-        "--fasta {input.fasta} "
-        "--output {output.txt} "
-        "--accessibility {input.access} "
-        "-ws {params.windowsize} "
-        "-wo {params.overlap} "
-        "--chr {wildcards.chrom} "
-        "--roh {input.roh}"
+    script:
+        "../../scripts/evaluate_phasing_performance.py"
+
+#        "--eval {input.eval} "
+#        "--test {input.test} "
+#        "--fasta {input.fasta} "
+#        "--output {output.txt} "
+#        "--accessibility {input.access} "
+#        "-ws {params.windowsize} "
+#        "-wo {params.overlap} "
+#        "--chr {wildcards.chrom} "
+#        "--roh {input.roh}"
