--- a/pipelines/phasing-by-transmission/Snakefile
+++ b/pipelines/phasing-by-transmission/Snakefile
@@ -83,6 +83,17 @@ rule phase:
         genotypes_cross_pass[gq[:, 0] < params.mingq, 0] = (-1, -1)
         genotypes_cross_pass[gq[:, 1] < params.mingq, 1] = (-1, -1)
 
+        # apply a mask to sites that have mendel errors (and where one parent is a het)
+        is_par_hetz = genotypes_cross_pass[:, :2].is_het().any(axis=1)
+        any_me = allel.mendel_errors(genotypes_cross_pass[:, :2], genotypes_cross_pass[:, 2:]).sum(axis=1) > 0
+        genotypes_cross_pass[is_par_hetz & any_me, 0] = (-1, -1)
+        genotypes_cross_pass[is_par_hetz & any_me, 1] = (-1, -1)
+
+        # apply a mask to sites where progeny are non segregating (and where one parent is a het)
+        is_prog_fixed = genotypes_cross_pass[:, 2:].count_alleles().is_non_segregating()
+        genotypes_cross_pass[is_par_hetz & is_prog_fixed, 0] = (-1, -1)
+        genotypes_cross_pass[is_par_hetz & is_prog_fixed, 1] = (-1, -1)
+
         phased_genotypes = allel.phase_by_transmission(genotypes_cross_pass, window_size=params.window_size)
         is_phased = np.all(phased_genotypes.is_phased, axis=1)
 
