--- a/pipelines/phasing-by-transmission/Snakefile
+++ b/pipelines/phasing-by-transmission/Snakefile
@@ -1,4 +1,3 @@
-# load the xphase module, currently within the ag1000g repo
 import re
 import numpy as np
 import pandas as pd
@@ -15,6 +14,7 @@ cross_ids = meta.cross.unique()
 
 rule all:
     input:
+        config="phasing_transmission_config.yml",
         table="mendel_errors.txt",
         zipped="ag1000g.crosses.phase2.ar1.haplotypes.zip",
         plots=expand("images/{chrom}/{cross}_maternal_painting.png", chrom=config["chromosomes"], cross=cross_ids)
@@ -329,3 +329,12 @@ rule paint_transmission:
                 ax=ax, title='{0} haplotypes (sites heterozygous in {1})'.format(desc[parent_label], parent_label))
             fig.savefig(output[parent_label][1], dpi=400, bbox_inches="tight")
     
+rule write_config:
+  output:
+    cfg="phasing_transmission_config.yml"
+  params:
+    req="h_vmem=2G"
+  run:
+    import yaml
+    with open(output.cfg, "w") as fh:
+      yaml.dump(config, fh)
