--- a/pipelines/combine-zarr-sample-genotypes/amin-example-config.yml
+++ b/pipelines/combine-zarr-sample-genotypes/amin-example-config.yml
@@ -1,4 +1,5 @@
 data_dir: /kwiat/vector/mirror/observatory/vo_min
+samplesets_output_dir: /kwiat/vector/observatory/production/vo_agam/combined_samplesets
 fasta_path: /kwiat/1/anopheles/observatory/analysis/20190311-vobs-asia-minimis-resources/Anopheles-minimus-MINIMUS1_SCAFFOLDS_AminM1.fa
 sites_path: /kwiat/1/anopheles/observatory/analysis/20190311-vobs-asia-minimis-resources/aminm1.allsites.nonN.zarr.zip
 gt_suffix: '.zip'
