--- a/pipelines/qc/Snakefile
+++ b/pipelines/qc/Snakefile
@@ -3,6 +3,8 @@ import numpy as np
 import pandas as pd
 import re
 
+samplesets_output_dir = config["samplesets_output_dir"]
+
 # read_fofn
 fofn_path = config["fofn"]
 sampleset = os.path.basename(os.path.dirname(fofn_path))
