Specify wildcard values for samplesets_output_dir

--- a/pipelines/combine-zarr-sample-genotypes/Snakefile
+++ b/pipelines/combine-zarr-sample-genotypes/Snakefile
@@ -20,6 +20,7 @@ rule all_merge:
   input:
     expand(
       os.path.join("{samplesets_output_dir}/{sampleset}/callset.zarr/{chrom}/calldata/{field}"),
+      samplesets_output_dir=[samplesets_output_dir]
       sampleset=[sampleset],
       field=config["fields"],
       chrom=config["contigs"]),
@@ -31,6 +32,7 @@ rule all_freqs:
   input:
     expand(
       os.path.join("{samplesets_output_dir}/{sampleset}/allele_frequencies.zarr/{chrom}/AF"),
+      samplesets_output_dir=[samplesets_output_dir]
       chrom=config["contigs"],
       sampleset=[sampleset]),
     os.path.join(sampleset, "merge_genotypes_config.yml")
