Remove superfluous square brackets

--- a/pipelines/combine-zarr-sample-genotypes/Snakefile
+++ b/pipelines/combine-zarr-sample-genotypes/Snakefile
@@ -18,7 +18,7 @@ rule all_merge:
   input:
     expand(
       os.path.join("{samplesets_output_dir}/{sampleset}/callset.zarr/{chrom}/calldata/{field}"),
-      samplesets_output_dir=[config["samplesets_output_dir"]],
+      samplesets_output_dir=config["samplesets_output_dir"],
       sampleset=[sampleset],
       field=config["fields"],
       chrom=config["contigs"]),
@@ -30,7 +30,7 @@ rule all_freqs:
   input:
     expand(
       os.path.join("{samplesets_output_dir}/{sampleset}/allele_frequencies.zarr/{chrom}/AF"),
-      samplesets_output_dir=[config["samplesets_output_dir"]],
+      samplesets_output_dir=config["samplesets_output_dir"],
       chrom=config["contigs"],
       sampleset=[sampleset]),
     os.path.join(sampleset, "merge_genotypes_config.yml")
