Use os.path.join. Factor out sampleset wildcard (use var).

--- a/pipelines/combine-zarr-sample-genotypes/Snakefile
+++ b/pipelines/combine-zarr-sample-genotypes/Snakefile
@@ -35,14 +35,14 @@ rule all_freqs:
 
 rule merge_zarr:
   input:
-    manifest=config["samplesets_output_dir"] + "/{sampleset}/manifest"
+    manifest=os.path.join(config["samplesets_output_dir"], sampleset, "manifest")
   output:
-    zarr=directory(config["samplesets_output_dir"] + "/{sampleset}/callset.zarr/{chrom}/calldata/{field}"),
-    done=touch(config["samplesets_output_dir"] + "/{sampleset}/callset.zarr/{chrom}/calldata/{field}.complete")
+    zarr=directory(os.path.join(config["samplesets_output_dir"], sampleset, "callset.zarr/{chrom}/calldata/{field}")),
+    done=touch(os.path.join(config["samplesets_output_dir"], sampleset, "callset.zarr/{chrom}/calldata/{field}.complete"))
   params:
-    samples=lambda y: os.path.join(config["samplesets_output_dir"], y.sampleset, "manifest"),
+    samples=lambda y: os.path.join(config["samplesets_output_dir"], sampleset, "manifest"),
     input_pattern=lambda y: os.path.join(config["samplesets_output_dir"], config["data_dir"], "{sample}" + config["gt_suffix"]),
-    output=lambda y: os.path.join(config["samplesets_output_dir"], y.sampleset, "callset.zarr"),
+    output=lambda y: os.path.join(config["samplesets_output_dir"], sampleset, "callset.zarr"),
     seqid=lambda y: y.chrom,
     field=lambda y: y.field,
     cname="zstd",
@@ -58,14 +58,14 @@ rule merge_zarr:
 
 rule compute_allele_freqs:
   output:
-    zarr=directory(config["samplesets_output_dir"] + "/{sampleset}/allele_frequencies.zarr/{chrom}/AF"),
-    done=touch(config["samplesets_output_dir"] + "/{sampleset}/allele_frequencies.zarr/{chrom}/AF.complete"),
+    zarr=directory(os.path.join(config["samplesets_output_dir"], sampleset, "allele_frequencies.zarr/{chrom}/AF"),
+    done=touch(os.path.join(config["samplesets_output_dir"], sampleset, "allele_frequencies.zarr/{chrom}/AF.complete"),
   input:
-    zarr=config["samplesets_output_dir"] + "/{sampleset}/callset.zarr/{chrom}/calldata/GT",
+    zarr=os.path.join(config["samplesets_output_dir"], sampleset, "callset.zarr/{chrom}/calldata/GT",
     sites=config["sites_path"]
   params:
-    outz=lambda y: os.path.join(config["samplesets_output_dir"], y.sampleset, "allele_frequencies.zarr"),
-    inz=lambda y: os.path.join(config["samplesets_output_dir"], y.sampleset, "callset.zarr"),
+    outz=lambda y: os.path.join(config["samplesets_output_dir"], sampleset, "allele_frequencies.zarr"),
+    inz=lambda y: os.path.join(config["samplesets_output_dir"], sampleset, "callset.zarr"),
     req="h_vmem=10G",
     pe=""
   run:
@@ -107,7 +107,7 @@ rule compute_allele_freqs:
 
 rule dump_manifest:
   output:
-    txt=config["samplesets_output_dir"] + "/{sampleset}/manifest"
+    txt=os.path.join(config["samplesets_output_dir"], sampleset, "manifest")
   params:
     req="h_vmem=4G",
   run:
@@ -118,7 +118,7 @@ rule dump_manifest:
 
 rule write_config:
   output:
-    cfg=config["samplesets_output_dir"] + "/{sampleset}/merge_genotypes_config.yml"
+    cfg=os.path.join(config["samplesets_output_dir"], sampleset, "merge_genotypes_config.yml")
   params:
     req="h_vmem=2G"
   run:
