changes to pipeline

--- a/pipelines/combine-zarr-sample-genotypes/Snakefile
+++ b/pipelines/combine-zarr-sample-genotypes/Snakefile
@@ -46,10 +46,13 @@ rule merge_zarr:
     output=os.path.join(config["samplesets_output_dir"], sampleset, "callset.zarr"),
     seqid=lambda y: y.chrom,
     field=lambda y: y.field,
-    cname="zstd",
-    clevel=1,
+    cname=lambda y: config["cname"].get(y.field, "zstd"),
+    clevel=lambda y: config["clevel"].get(y.field, 1),
+    dtype=lambda y: config["dtype"].get(y.field, None),
+    order=lambda y: config["order"].get(y.field, "C"),
+    fill_na=lambda y: config["fill_na"].get(y.field, None),
+    shuffle=lambda y: config["shuffle"].get(y.field, 0),
     chunk_width=config["chunk_width"],
-    shuffle=0,
     num_workers=4,
     req="h_vmem=12G",
     pe="-pe simple_pe 4"
